tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_struct_field_leaks_private_type_in_generic/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type `Bar` is more private than item `FooBar::value`
  ┌─ src/main.nr:5:33
  │
5 │         pub struct FooBar { pub value: Foo<Bar> }
  │                                 -----
  │

Aborting due to 1 previous error
