tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_struct_field_leaks_private_type_in_generic/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Bar` is more private than item `FooBar::value`
  ┌─ src/main.nr:5:33
  │
5 │         pub struct FooBar { pub value: Foo<Bar> }
  │                                 -----
  │

Aborting due to 1 previous error
